# pokeemerald-rogue-assistant

./: CMakeLists.txt  CMakePresets.json  RogueAssistant.sln
RogueAssistantCpp/: CMakeLists.txt  RogueAssistantCpp.vcxproj  RogueAssistantCpp.vcxproj.filters
RogueAssistantCpp/Assets/: RogueAssistant_mGBA.lua  RogueAssistant_mGBA_TEST.lua
RogueAssistantCpp/Inc/: Defines.h  GameConnection.h  GameConnectionManager.h  GameDataRequest.h  Log.h
RogueAssistantCpp/Inc/UI/: PrimaryUI.h  Window.h
RogueAssistantCpp/Src/: DataStream.cpp  GameConnection.cpp  GameConnectionManager.cpp  GameConnectionRPCs.cpp  LuaMain.cpp  Main.cpp  ObservedGameMemory.cpp  UserData.cpp
RogueAssistantCpp/Src/Behaviours/: CommonBehaviour.cpp  HomeBoxBehaviour.cpp  MultiplayerBehaviour.cpp
RogueAssistantCpp/Src/UI/: PrimaryUI.cpp  Window.cpp
RogueAssistantStub/: CMakeLists.txt  RogueAssistantStub.cpp  RogueAssistantStub.vcxproj  RogueAssistantStub.vcxproj.filters  RogueAssistant_mGBA.lua  resource.h
